# Minecraft-Rust-Edition

./: Cargo.toml  README.md  Zellij.kdl
assets/blocks/: stone.ron
assets/textures/atlases/: blocks.json
client/: Cargo.toml
client/assets/lang/: en-us.json
client/assets/shaders/: blur.wgsl
client/src/: audio.rs  camera.rs  diagnostic.rs  lang.rs  main.rs  state.rs
client/src/loading/: loader.rs  mod.rs  ready.rs
client/src/loading/game/: mod.rs  register.rs  setup.rs  textures.rs
client/src/loading/game/computed/: mod.rs
client/src/ui/: backgrounds.rs  button.rs  helper.rs  mod.rs  scale.rs
client/src/ui/loading/: game.rs  mod.rs
client/src/ui/menus/: mod.rs  title.rs  world_select.rs
client/src/util/: blur.rs  despawn.rs  fade.rs  last.rs  mod.rs  spin.rs  timer.rs  toggle.rs
docs/: DOC.typ
simulation/: Cargo.toml
simulation/src/: dimensions.rs  lib.rs
simulation/src/blocks/: collider.rs  face.rs  id.rs  light.rs  light2.rs  mod.rs  state.rs  tag.rs
simulation/src/data/: id.rs  map.rs  mod.rs  registry.rs  tag.rs
simulation/src/math/: bits.rs  collider.rs  dir.rs  mod.rs  one.rs  ray.rs  vec2.rs  vec3.rs
simulation/src/terrain/: biome.rs  fbm.rs  hash.rs  mod.rs  noisemap.rs  worley.rs
simulation/src/terrain/noise/: mod.rs  worley.rs
simulation/src/terrain/stages/: mod.rs
simulation/src/world/: cached.rs  chunk.rs  cluster.rs  iter.rs  light.rs  mod.rs  reader.rs  region.rs  util.rs
simulation/src/world/events/: mod.rs  rtick.rs
simulation/src/world2/: buffer.rs  chunk.rs  mod.rs  util.rs  volume.rs
