[package]
name = "client"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

# builds dependencies at a high optimization level.
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy.workspace = true
bevy_easings.workspace = true
log.workspace = true
bevy_simple_text_input = "0.10.0"
iyes_perf_ui.git = "https://github.com/IyesGames/iyes_perf_ui.git"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
walkdir = "2.5.0"
